--- a/rest_framework/templates/rest_framework/docs/document.html
+++ b/rest_framework/templates/rest_framework/docs/document.html
@@ -1,5 +1,16 @@
 {% load rest_framework %}
 
+<div class="row intro">
+<div class="col-md-6 intro-title">
+    <h1>{{ document.title }}</h1>
+</div>
+<div class="col-md-6 intro-code">
+    {% if 'shell' in langs %}{% include "rest_framework/docs/langs/shell-intro.html" %}{% endif %}
+    {% if 'python' in langs %}{% include "rest_framework/docs/langs/python-intro.html" %}{% endif %}
+    {% if 'javascript' in langs %}{% include "rest_framework/docs/langs/javascript-intro.html" %}{% endif %}
+</div>
+</div>
+
 {% for section_key, section in document.data.items %}
     <h2 id="{{ section_key }}" class="coredocs-section-title">{{ section_key }} <a href="#{{ section_key }}"><i class="fa fa-link" aria-hidden="true"></i>
 </a></h2>
