iter over items in python, not template

--- a/rest_framework/templates/rest_framework/admin/dict_value.html
+++ b/rest_framework/templates/rest_framework/admin/dict_value.html
@@ -1,7 +1,7 @@
 {% load rest_framework %}
 <table class="table table-striped">
   <tbody>
-    {% for key, value in value.items %}
+    {% for key, value in value %}
       <tr>
         <th>{{ key|format_value }}</th>
         <td>{{ value|format_value }}</td>
