--- a/rest_framework/templates/rest_framework/admin/dict_value.html
+++ b/rest_framework/templates/rest_framework/admin/dict_value.html
@@ -1,10 +1,10 @@
 {% load rest_framework %}
 <table class="table table-striped">
   <tbody>
-    {% for key, value in value %}
+    {% for k, v in value %}
       <tr>
-        <th>{{ key|format_value }}</th>
-        <td>{{ value|format_value }}</td>
+        <th>{{ k|format_value }}</th>
+        <td>{{ v|format_value }}</td>
       </tr>
     {% endfor %}
   </tbody>
