--- a/rest_framework/templates/rest_framework/admin/dict_value.html
+++ b/rest_framework/templates/rest_framework/admin/dict_value.html
@@ -1,7 +1,7 @@
 {% load rest_framework %}
 <table class="table table-striped">
   <tbody>
-    {% for k, v in value %}
+    {% for k, v in value|items %}
       <tr>
         <th>{{ k|format_value }}</th>
         <td>{{ v|format_value }}</td>
