--- a/rest_framework/templates/rest_framework/docs/index.html
+++ b/rest_framework/templates/rest_framework/docs/index.html
@@ -16,7 +16,7 @@
 
         <link href="{% static 'rest_framework/docs/img/favicon.ico' %}" rel="shortcut icon">
 
-        <style>{{ code_style }}</style>
+        {% if code_style %}<style>{{ code_style }}</style>{% endif %}
         <script src="{% static 'rest_framework/js/coreapi-0.0.20.js' %}"></script>
         <script src="{% url 'api-docs:schema-js' %}"></script>
 
