added autoescape off tags document description

--- a/rest_framework/templates/rest_framework/docs/document.html
+++ b/rest_framework/templates/rest_framework/docs/document.html
@@ -4,7 +4,7 @@
 <div class="col-md-6 intro-title">
     <h1>{{ document.title }}</h1>
     {% if document.description %}
-    <p>{% render_markdown document.description %}</p>
+    <p>{% autoescape off %}{% render_markdown document.description %}{% endautoescape %}</p>
     {% endif %}
 </div>
 <div class="col-md-6 intro-code">
