css for multi-level menu on large screens

--- a/rest_framework/static/rest_framework/docs/css/base.css
+++ b/rest_framework/static/rest_framework/docs/css/base.css
@@ -115,6 +115,13 @@ pre.highlight code {
   background-color: #020203;
 }
 
+.sidebar .menu-list li.collapsed + ul.menu-content {
+  height: 0;
+}
+
+.sidebar .menu-list li.collapsed + ul.menu-content li {
+  display: none;
+}
 
 .sidebar .menu-list ul .sub-menu li a,
 .sidebar .menu-list li .sub-menu li a {
