--- a/rest_framework/templates/rest_framework/docs/_recursive_document.html
+++ b/rest_framework/templates/rest_framework/docs/_recursive_document.html
@@ -1,6 +1,6 @@
 {% for section_key, section in items %}
 {% if section_key %}
-  <h{{level}} id="{{prefix}}-{{ section_key }}" class="coredocs-section-title">{{ section_key }} <a href="#{{ section_key }}"><i class="fa fa-link" aria-hidden="true"></i>
+  <h{{level}} id="{{prefix}}{{ section_key }}" class="coredocs-section-title">{{ section_key }} <a href="#{{ section_key }}"><i class="fa fa-link" aria-hidden="true"></i>
   </a></h{{level}}>
 {% endif %}
 
