--- a/rest_framework/templates/rest_framework/docs/_recursive_menu.html
+++ b/rest_framework/templates/rest_framework/docs/_recursive_menu.html
@@ -6,11 +6,15 @@
         {% if section.links.items %}
             <ul class="sub-menu {% if section_key %}collapse{% endif %}" id="{{prefix}}{{ section_key }}-dropdown">
                 {% for link_key, link in section.links.items %}
-                <li><a href="#{{prefix}}-{{ section_key }}-{{ link_key }}">{{ link.title|default:link_key }}</a></li>
+                <li><a href="#{% if prefix %}{{prefix}}/{% endif %}{{ section_key }}-{{ link_key }}">{{ link.title|default:link_key }}</a></li>
                 {% endfor %}
             </ul>
         {% else %}
-            {% include 'rest_framework/docs/_recursive_menu.html' with items=section.items prefix=prefix|add:section_key %}
+            {% if prefix %}
+                {% include 'rest_framework/docs/_recursive_menu.html' with items=section.items prefix=prefix|add:'/'|add:section_key %}
+            {% else %}
+                {% include 'rest_framework/docs/_recursive_menu.html' with items=section.items prefix=section_key %}
+            {% endif %}
         {% endif %}
     {% endfor %}
 </ul>
