--- a/rest_framework/templates/rest_framework/docs/document.html
+++ b/rest_framework/templates/rest_framework/docs/document.html
@@ -16,7 +16,7 @@
 
 {% for section_key, section in document.data|items %}
 {% if section_key %}
-    <h2 id="{{ section_key }}" class="coredocs-section-title">{{ section_key }} <a href="#{{ section_key }}"><i class="fa fa-link" aria-hidden="true"></i>
+    <h2 id="{{ section_key }}" class="coredocs-section-title">{{ section_key | symbolize }} <a href="#{{ section_key }}"><i class="fa fa-link" aria-hidden="true"></i>
 </a></h2>
 {% endif %}
 
