--- a/rest_framework/templates/rest_framework/docs/document.html
+++ b/rest_framework/templates/rest_framework/docs/document.html
@@ -14,17 +14,6 @@
 </div>
 </div>
 
-{% for section_key, section in document.data|items %}
-{% if section_key %}
-    <h2 id="{{ section_key }}" class="coredocs-section-title">{{ section_key }} <a href="#{{ section_key }}"><i class="fa fa-link" aria-hidden="true"></i>
-</a></h2>
-{% endif %}
-
-    {% for link_key, link in section.links|items %}
-        {% include "rest_framework/docs/link.html" %}
-    {% endfor %}
-{% endfor %}
-
-{% for link_key, link in document.links|items %}
-    {% include "rest_framework/docs/link.html" %}
-{% endfor %}
+{% with parent_key=None section=document %}
+    {% include "rest_framework/docs/document-incl.html" %}
+{% endwith %}
