--- a/rest_framework/templates/rest_framework/docs/_recursive_menu.html
+++ b/rest_framework/templates/rest_framework/docs/_recursive_menu.html
@@ -3,17 +3,17 @@
         <li data-toggle="collapse" data-target="#{{prefix}}{{ section_key }}-dropdown" class="collapsed">
           <a><i class="fa fa-dot-circle-o fa-lg"></i> {% if prefix %}{{prefix}}/{% endif %}{% if section_key %}{{ section_key }}{% else %}API Endpoints{% endif %} <span class="arrow"></span></a>
         </li>
-        {% if section.links.items %}
+        {% if section.links|items %}
             <ul class="sub-menu {% if section_key %}collapse{% endif %}" id="{{prefix}}{{ section_key }}-dropdown">
-                {% for link_key, link in section.links.items %}
+                {% for link_key, link in section.links|items %}
                 <li><a href="#{% if prefix %}{{prefix}}/{% endif %}{{ section_key }}-{{ link_key }}">{{ link.title|default:link_key }}</a></li>
                 {% endfor %}
             </ul>
         {% else %}
             {% if prefix %}
-                {% include 'rest_framework/docs/_recursive_menu.html' with items=section.items prefix=prefix|add:'/'|add:section_key %}
+                {% include 'rest_framework/docs/_recursive_menu.html' with items=section|items prefix=prefix|add:'/'|add:section_key %}
             {% else %}
-                {% include 'rest_framework/docs/_recursive_menu.html' with items=section.items prefix=section_key %}
+                {% include 'rest_framework/docs/_recursive_menu.html' with items=section|items prefix=section_key %}
             {% endif %}
         {% endif %}
     {% endfor %}
