Docs: always consider section sub-documents
If the section has both links and sub-documents (nested routes),
then both should be displayed.

--- a/rest_framework/templates/rest_framework/docs/_recursive_document.html
+++ b/rest_framework/templates/rest_framework/docs/_recursive_document.html
@@ -1,6 +1,7 @@
+{% load rest_framework %}
 {% for section_key, section in items %}
 {% if section_key %}
-  <h{{level}} id="{{prefix}}{{ section_key }}" class="coredocs-section-title">{{ section_key }} <a href="#{{ section_key }}"><i class="fa fa-link" aria-hidden="true"></i>
+  <h{{level}} id="{{prefix}}{{ section_key }}" class="coredocs-section-title">{{ section_key }} <a href="#{{ prefix }}{{ section_key }}"><i class="fa fa-link" aria-hidden="true"></i>
   </a></h{{level}}>
 {% endif %}
 
@@ -8,8 +9,7 @@
         {% for link_key, link in section.links|items %}
             {% include "rest_framework/docs/link.html" with prefix=prefix level=level|add:1%}
         {% endfor %}
-    {% else %}
-        {% include 'rest_framework/docs/_recursive_document.html' with items=section|items prefix=prefix|add:section_key|add:'/' level=level|add:1 %}
     {% endif %}
+    {% include 'rest_framework/docs/_recursive_document.html' with items=section.data|items prefix=prefix|add:section_key|add:'/' level=level|add:1 %}
 {% endfor %}
 
