--- a/rest_framework/templates/rest_framework/docs/document.html
+++ b/rest_framework/templates/rest_framework/docs/document.html
@@ -14,8 +14,8 @@
 </div>
 </div>
 
-{% include 'rest_framework/docs/_recursive_document.html' with items=document.data|items level=2 %}
+{% include "rest_framework/docs/_recursive_document.html" with items=document.data|items path=""|make_list level=2 %}
 
 {% for link_key, link in document.links|items %}
-    {% include "rest_framework/docs/link.html" %}
+    {% include "rest_framework/docs/link.html" with path=""|make_list %}
 {% endfor %}
