Docs: slugify HTML IDs so they're restricted to alphanumerics and dashes
This is a precaution to avoid JS breaking if some routes would
contain something that doesn't fit well into CSS `#some-id` selectors,
e.g. semicolons or parens.

--- a/rest_framework/templates/rest_framework/docs/_recursive_document.html
+++ b/rest_framework/templates/rest_framework/docs/_recursive_document.html
@@ -1,9 +1,9 @@
 {% load rest_framework %}
 {% for section_key, section in items %}
     {% if section_key %}
-        <h{{level}} id="{{ path|list_add:section_key|join:'-' }}" class="coredocs-section-title">
+        <h{{level}} id="{{ path|list_add:section_key|join:'-'|slugify }}" class="coredocs-section-title">
             {{ section_key }}
-            <a href="#{{ path|list_add:section_key|join:'-' }}"><i class="fa fa-link" aria-hidden="true"></i></a>
+            <a href="#{{ path|list_add:section_key|join:'-'|slugify }}"><i class="fa fa-link" aria-hidden="true"></i></a>
         </h{{level}}>
     {% endif %}
 
