--- a/rest_framework/templates/rest_framework/docs/document.html
+++ b/rest_framework/templates/rest_framework/docs/document.html
@@ -13,7 +13,7 @@
     {% if 'javascript' in langs %}{% include "rest_framework/docs/langs/javascript-intro.html" %}{% endif %}
 </div>
 </div>
-{% if document.data %}
+
 {% for section_key, section in document.data|items %}
 {% if section_key %}
     <h2 id="{{ section_key }}" class="coredocs-section-title">{{ section_key }} <a href="#{{ section_key }}"><i class="fa fa-link" aria-hidden="true"></i>
@@ -23,9 +23,15 @@
     {% for link_key, link in section.links|items %}
         {% include "rest_framework/docs/link.html" %}
     {% endfor %}
+    {% if not section.links %}
+        {%for sub_section_key,sub_section in section.data|items%}
+            {% for link_key, link in sub_section.links|items %}
+                {% include "rest_framework/docs/link.html" %}
+            {% endfor %}
+        {%endfor%}
+    {% endif %}
 {% endfor %}
 
 {% for link_key, link in document.links|items %}
     {% include "rest_framework/docs/link.html" %}
 {% endfor %}
-{% endif %}
