--- a/rest_framework/templates/rest_framework/docs/sidebar.html
+++ b/rest_framework/templates/rest_framework/docs/sidebar.html
@@ -5,7 +5,6 @@
     <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
     <div class="menu-list">
         <ul id="menu-content" class="menu-content collapse out">
-            {% if document.data %}
             {% for section_key, section in document.data|items %}
             <li data-toggle="collapse" data-target="#{{ section_key }}-dropdown" class="collapsed">
                 <a><i class="fa fa-dot-circle-o fa-lg"></i> {% if section_key %}{{ section_key }}{% else %}API Endpoints{% endif %} <span class="arrow"></span></a>
@@ -13,10 +12,16 @@
                 {% for link_key, link in section.links|items %}
                     <li><a href="#{{ section_key }}-{{ link_key }}">{{ link.title|default:link_key }}</a></li>
                 {% endfor %}
-                </ul>
-            </li>
+                {% if not section.links %}
+                    {% for sub_section_key, sub_section in section.data|items %}
+                       {% for link_key, link in sub_section.links|items %}
+                            <li><a href="#{{section_key}}-{{sub_section_key}}-{{ link_key }}">{{sub_section_key}} >> {{ link.title|default:link_key }}</a></li>
+                         {% endfor %}
+                    {% endfor %}
+                {%endif%}
+            	</ul>
+	    </li>
             {% endfor %}
-            {% endif %}
         </ul>
 
         <ul class="menu-list menu-list-bottom">
