--- a/docs_theme/css/bootstrap.css
+++ b/docs_theme/css/bootstrap.css
@@ -850,7 +850,7 @@ address {
 code,
 pre {
   padding: 0 3px 2px;
-  font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
+  font-family: monospace, "Courier New", Monaco, Menlo, Consolas;
   font-size: 12px;
   color: #333333;
   -webkit-border-radius: 3px;
@@ -2938,7 +2938,7 @@ table [class*=span],
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  background-color: #f5f5f5;
+  background-color: #f1f1f1;
   border: 1px solid #e3e3e3;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
