Disable admin detail link when no URL

--- a/rest_framework/templates/rest_framework/admin/list.html
+++ b/rest_framework/templates/rest_framework/admin/list.html
@@ -14,7 +14,11 @@
           {% endif %}
         {% endfor %}
         <td>
+          {% if row.url %}
           <a href="{{ row.url }}"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
+          {% else %}
+          <span class="glyphicon glyphicon-chevron-right text-muted" aria-hidden="true"></span>
+          {% endif %}
         </td>
       </tr>
     {% endfor %}
