add sans-serif fallback for Verdana in docs sidebar
Co-Authored-By: Joachim Jablon <ewjoachim@gmail.com>

--- a/rest_framework/static/rest_framework/docs/css/base.css
+++ b/rest_framework/static/rest_framework/docs/css/base.css
@@ -30,7 +30,7 @@ pre.highlight code {
 
 .sidebar {
   overflow: auto;
-  font-family: verdana;
+  font-family: verdana, sans-serif;
   font-size: 12px;
   font-weight: 200;
   background-color: #2e353d;
