--- a/rest_framework/templates/rest_framework/base.html
+++ b/rest_framework/templates/rest_framework/base.html
@@ -247,6 +247,7 @@
                       <div class="tab-pane" id="put-object-form">
                         <form action="{{ request.get_full_path }}" data-method="PUT" enctype="multipart/form-data" class="form-horizontal" novalidate>
                           <fieldset>
+                            {% csrf_token %}
                             {{ put_form }}
                             <div class="form-actions">
                               <button class="btn btn-primary js-tooltip" title="Make a PUT request on the {{ name }} resource">PUT</button>
